Config Retrofit and check request

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.toni.mvvm__clean_code">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,7 +11,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MVVM__Clean_Code">
-        <activity android:name=".ui.view.Home">
+        <activity android:name=".ui.view.HomeView">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
