add HomeBundle and rearrange folders

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MVVM__Clean_Code">
 
-        <activity android:name=".ui.view.HomeView">
+        <activity android:name="com.toni.mvvm__clean_code.ui.home.view.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
