--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,11 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
 
+    }
+    testOptions {
+        unitTests.includeAndroidResources = true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -62,6 +65,14 @@ dependencies {
     def nav_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    /**
+     * Test
+     */
+
+    testImplementation 'org.mockito:mockito-core:2.23.4'
+    testImplementation 'androidx.test:core:1.3.0'
+
 
 
 }
